spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 /* Base  */
 /* —————————————————————————————— */
 
+/*
+Break Points:
+
+- 40rem
+- 450px
+*/
+
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -33,16 +40,23 @@ a {
   color: #f1946c;
   font-weight: bold;
   text-decoration: none;
+  transition: .2s;
 }
 
 a:hover,
 a:active {
-  opacity: 0.8;
+  opacity: 0.75;
 }
 
 ul {
   padding-left: 1.5rem;
   list-style-type: square;
+}
+
+blockquote {
+  margin: 1.5rem 0;
+  padding-left: .75rem;
+  border-left: 3px solid #f1946c;
 }
 
 /* Typography */
@@ -53,38 +67,13 @@ p {
 }
 
 h1, h2, h3 {
-  /*font-family: 'Satisfy', serif;*/
   font-weight: 800;
   margin: 1rem 0;
 }
 
-/*h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.7rem;
-}*/
 
 /* Layout */
 /* —————————————————————————————— */
-
-.resume-section {
-  padding: 2rem 0;
-  border-top: 1px dashed rgba(0,0,0,0.1);
-}
-
-.resume-section:last-of-type {
-  /*border-bottom: none;*/
-}
-
-.resume-section > .heading {
-  margin-top: 0;
-}
 
 .wrapper {
   background-color: white;
@@ -92,8 +81,33 @@ h3 {
   padding: 0 2rem ;
   border-radius: 3px;
   box-shadow: 0 1px 03px rgba(0,0,0,0.12),
-              0 4px 15px rgba(0,0,0,0.07);
+  0 4px 15px rgba(0,0,0,0.07);
 }
+
+@media (max-width: 40rem) {
+  .wrapper {
+    border-radius: 0;
+  }
+}
+
+.resume-section {
+  padding-top: 2rem;
+  margin-bottom: 2rem;
+  border-top: 1px dashed rgba(0,0,0,0.1);
+}
+
+.resume-section:last-of-type {
+  padding-bottom: 3rem;
+  margin-bottom: 0;
+}
+
+.resume-section:last-of-type {
+}
+
+.resume-section > .heading {
+  margin-top: 0;
+}
+
 
 /* Header */
 /* —————————————————————————————— */
@@ -113,21 +127,12 @@ h3 {
   font-size: 0.9rem;
 }
 
-.my-photo {
-  max-width: 150px;
-  position: absolute;
-  right: 2.5rem;
-  top: 1rem;
-  transform: rotate(3deg);
-  transition: .4s;
-
-  border: 5px solid white;
-  box-shadow: 0 2px 7px rgba(0,0,0,0.15);
+.social-links {
+  font-size: 0.9rem;
 }
 
-  .my-photo:hover,
-  .my-photo:active {
-    transform: scale(1.1);
+  .social-links a {
+    display: block;
   }
 
 /* SECTION: Summary */
@@ -138,13 +143,7 @@ h3 {
 /* —————————————————————————————— */
 
 .skill-list h3 {
-  margin-top: 2.5rem;
-}
-
-.skill-list blockquote {
-  margin: 1.5rem 0;
-  padding-left: .75rem;
-  border-left: 3px solid #f1946c;
+  margin-top: 2rem;
 }
 
 .skill-list .list {
@@ -154,9 +153,10 @@ h3 {
 
 .skill-list .item {
   margin-bottom: .5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+}
+
+.skill-list .item::before {
+  content: "\f0da";
 }
 
 .skill-list .item.separator {
@@ -168,13 +168,14 @@ h3 {
 .skill-list .score {
   color: white;
   border-radius: 3px;
-  padding: 0.2rem .5rem;
-  font-size: .75rem;
-
-  font-weight: 400;
-
+  padding: 0.35rem .5rem;
   float: right;
+
+  font-size: .75rem;
+  font-weight: 400;
 }
+
+/* skill levels */
 
   .score.lvl-1 {
     background-color: #539fdb;
@@ -220,12 +221,24 @@ h3 {
   padding-left: 0;
 }
 
+.education-list .summary {
+  margin-bottom: .5rem;
+}
+
+.education-list .summary .course {
+  margin-bottom: 0;
+}
+
+.education-list .summary .institution {
+  font-weight: bold;
+}
+
 .education-list .item {
   margin-bottom: 1.5rem;
 }
 
   .education-list .item .date {
-    font-size: 0.81em;
+    /*font-size: 0.9em;*/
   }
 
   .education-list .item .highlight {
@@ -237,38 +250,39 @@ h3 {
 /* —————————————————————————————— */
 
 .job-entry .summary {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
   .job-entry .summary .rolename {
     margin-bottom: 0;
   }
 
-  .job-entry .summary .companyname {
-    font-style: italic;
+  .job-entry .summary .period {
     font-size: 0.9rem;
+    /*opacity: 0.5;*/
   }
 
 .job-entry .activities {
   padding-left: 1.5rem;
 }
 
-  .job-entry .activities .item {
-    padding-bottom: 1rem;
-  }
-
-    @media (min-width: 450px) {
-      .job-entry .activities .item {
-        padding-bottom: 0;
-      }
+  @media (max-width: 40rem) {
+    .job-entry .activities .item {
+      padding-bottom: .5rem;
     }
+  }
 
 /* SECTION: Footer */
 /* —————————————————————————————— */
 
 footer {
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   text-align: center;
   font-weight: bold;
+  font-size: .85rem;
   opacity: .5;
+}
+
+footer p {
+  margin: 0;
 }
